--- a/PowerApp/Base.lproj/Main.storyboard
+++ b/PowerApp/Base.lproj/Main.storyboard
@@ -101,8 +101,6 @@
         <!--Goal View Controller-->
         <scene sceneID="KQX-Ma-79v">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JiE-Oj-EjW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="QR9-ap-QPh" userLabel="Exit" sceneMemberID="exit"/>
                 <viewController id="EwR-XX-QTI" customClass="PAGoalViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="0mM-8B-ieS"/>
@@ -153,6 +151,8 @@
                         <segue destination="GSc-qz-EAg" kind="push" identifier="segueToElementDetail" id="YT2-0C-W4I"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JiE-Oj-EjW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="QR9-ap-QPh" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1580" y="498"/>
         </scene>
@@ -242,18 +242,18 @@
                                     <action selector="sliderRating:" destination="ty0-Uf-qet" eventType="valueChanged" id="Fvf-bj-xCA"/>
                                 </connections>
                             </slider>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="High                       Medium                       Low" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sv8-qW-oib">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Low                        Medium                      High" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sv8-qW-oib">
                                 <rect key="frame" x="20" y="216" width="280" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" keyboardDismissMode="interactive" translatesAutoresizingMaskIntoConstraints="NO" id="756-vu-bvj">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="756-vu-bvj">
                                 <rect key="frame" x="20" y="268" width="280" height="241"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2WJ-no-f8L">
                                 <rect key="frame" x="20" y="518" width="280" height="30"/>
